# midori

./: CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.freenove  sdkconfig.defaults.m5stack  sdkconfig.old  switch_board.sh
docs/: M5STACK_UI_DESIGN.md  MML_DESIGN.md  USB_MIDI_IMPLEMENTATION.md
main/: CMakeLists.txt  Kconfig.projbuild  freenove-usbhost-sample.c  idf_component.yml  usb_midi_host.c
main/lcd_console/: lcd_console.cpp  lcd_console.h
main/platform/: platform.h  platform_freenove.c  platform_m5stack.cpp
main/sd_card/: sd_card.c  sd_card.h
main/ui/: screen_log.cpp  screen_log.h  screen_main.cpp  screen_main.h  screen_midi_info.cpp  screen_midi_info.h  screen_pad.cpp  screen_pad.h  screen_script.cpp  screen_script.h  screen_settings.cpp  screen_settings.h  ui_common.cpp  ui_common.h  ui_manager.cpp  ui_manager.h
